// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should support custom references - adv 1`] = `
Array [
  "1",
  "2",
  "1",
  null,
  "3",
]
`;

exports[`it should support custom references - adv 2`] = `
Array [
  Object {
    "selection": "Michel",
    "users": Object {
      "1": Object {
        "id": "1",
        "name": "Michel",
      },
      "2": Object {
        "id": "2",
        "name": "Mattia",
      },
    },
  },
  Object {
    "selection": "Mattia",
    "users": Object {
      "1": Object {
        "id": "1",
        "name": "Michel",
      },
      "2": Object {
        "id": "2",
        "name": "Mattia",
      },
    },
  },
  Object {
    "selection": "Michel",
    "users": Object {
      "1": Object {
        "id": "1",
        "name": "Michel",
      },
      "2": Object {
        "id": "2",
        "name": "Mattia",
      },
    },
  },
  Object {
    "selection": "Michel",
    "users": Object {
      "2": Object {
        "id": "2",
        "name": "Mattia",
      },
    },
  },
  Object {
    "selection": "Michel",
    "users": Object {
      "2": Object {
        "id": "2",
        "name": "Mattia",
      },
      "3": Object {
        "id": "3",
        "name": "Michel",
      },
    },
  },
]
`;

exports[`it should support custom references - adv 3`] = `
Array [
  Object {
    "op": "replace",
    "path": "/selection",
    "value": "Michel",
  },
  Object {
    "op": "replace",
    "path": "/selection",
    "value": "Mattia",
  },
  Object {
    "op": "replace",
    "path": "/selection",
    "value": "Michel",
  },
  Object {
    "op": "remove",
    "path": "/users/1",
  },
  Object {
    "op": "add",
    "path": "/users/3",
    "value": Object {
      "id": "3",
      "name": "Michel",
    },
  },
]
`;

exports[`it should support custom references - adv 4`] = `
Array [
  Object {
    "op": "replace",
    "path": "/selection",
    "value": "Mattia",
  },
  Object {
    "op": "replace",
    "path": "/selection",
    "value": "Michel",
  },
  Object {
    "op": "replace",
    "path": "/selection",
    "value": "Mattia",
  },
  Object {
    "op": "add",
    "path": "/users/1",
    "value": Object {
      "id": "1",
      "name": "Michel",
    },
  },
  Object {
    "op": "remove",
    "path": "/users/3",
  },
]
`;
